--- a/plugins/heidimarasigan/nltc/components/applicationform/default.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/default.htm
@@ -1,3 +1,3 @@
-<div>
-     {% partial __SELF__~'::personalinformation' %}
+<div id="form_wrapper">
+     {% partial __SELF__~'::studyprogram' %}
 </div>
