--- a/plugins/heidimarasigan/nltc/components/applicationform/studyprogram.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/studyprogram.htm
@@ -58,7 +58,7 @@
 	      		<div class="pull-right">
 					<div class="btn-group" role="group" aria-label="align-right">
 						<!-- <button type="button" class="btn btn-default"><a href="#">Back</a></button> -->
-						<button type="button" class="btn btn-default"><a href="#">Next:Personal Information</a></button>
+						<button type="submit" class="btn btn-primary" form="form1" value="Submit" date-request="onSave" data-request-update="'{{ __SELF__ }}::personalinformation':'#form_wrapper'">Next:Personal Information</button>
 					</div>
 				</div>
 			</div>			
