--- a/plugins/heidimarasigan/nltc/components/applicationform/familybackground.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/familybackground.htm
@@ -16,43 +16,21 @@
  			</div>
  			<div class="col-md-12">
 	 			<div class="form-group">
-	 				<h5>Children</h5>
-	 				<div class="col-md-12" align="center">
-		 				<a class="btn" href="#">
-	  						<i class="glyphicon glyphicon-plus-sign"></i> Add </a>
-	  					<a class="btn" href="#">
-	  						<i class="glyphicon glyphicon-minus-sign"></i> Remove </a>
-	  				</div>
-	 				<div class="col-md-6">
-			 			<div class="form-group">
-			 				<h5>Child Name</h5>
-			 				<input type="text" class="form-control">
-			 			</div>
-			 		</div>
-		 			<div class="col-md-6">
-			 			<div class="form-group">
-			 				<h5>Age</h5>
-			 				<input type="text" class="form-control">
-			 			</div>
-		 			</div>
-		 			<div class="col-md-6">
-			 			<div class="form-group">
-			 				<h5>Gender</h5>
-			 				<div class="radio">
-				 				<label>
-				 					<input type="radio" name="gender_type">Male
-				 				</label>
-				 			</div>
-				 			<div class="radio">
-				 				<label>
-				 					<input type="radio" name="gender_type">Female
-				 				</label>
-				 			</div>			 			
-			 			</div>
-					</div>
-	 				
-	 			</div>
- 			</div>
+	 				<h5>Children <a class="btn" href="#"
+		 				data-request="{{ __SELF__ }}::onAddChild"
+		 				data-request-update="'{{ __SELF__ }}::child_item':'#children_wrapper'"
+		 				> 
+	  						<i class="glyphicon glyphicon-plus-sign"></i> Add </a></h5>
+		  		</div>
+	  		</div>
+			<!-- wrapper of all the list of children -->
+			<div id="children_wrapper">
+				{% partial __SELF__~'::child_item' %}
+			</div>
+			<!-- end of wrapper of all the list of children -->
+	 			
+ 			
+
  			<div class="col-md-12">
 	 			<div class="form-group">
 	 				<h5>Is your spouse (if married), or your parents / guardians (if not married), in agreement with you to enroll in NTC this school year?</h5>
