--- a/plugins/heidimarasigan/nltc/components/applicationform/default.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/default.htm
@@ -1,3 +1,4 @@
 <div id="form_wrapper">
-     {% partial __SELF__~'::studyprogram' %}
+
+     {% partial __SELF__~'::ministryinvolvement' %}
 </div>
