--- a/plugins/heidimarasigan/nltc/components/applicationform/educationalbackground.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/educationalbackground.htm
@@ -6,49 +6,49 @@
 				<div class="col-md-6">
 		 			<div class="form-group">
 		 				<h5>Primary</h5>
-		 				<input type="text" class="form-control">
+		 				<input type="text" name="education_primary" class="form-control">
 		 			</div>
 		 		</div>
 	 			<div class="col-md-6">
 		 			<div class="form-group">
 		 				<h5>Year of Completion</h5>
-		 				<input type="text" class="form-control">
+		 				<input type="text" name="education_primary_year" class="form-control">
 		 			</div>
 	 			</div>
 	 			<div class="col-md-6">
 		 			<div class="form-group">
 		 				<h5>Secondary</h5>
-		 				<input type="text" class="form-control">
+		 				<input type="text" name="education_secondary" class="form-control">
 		 			</div>
 	 			</div>
 	 			<div class="col-md-6">
 		 			<div class="form-group">
 		 				<h5>Year of Completion</h5>
-		 				<input type="text" class="form-control">
+		 				<input type="text" name="education_secondary_year" class="form-control">
 		 			</div>
 	 			</div>
 	 			<div class="col-md-6">
 		 			<div class="form-group">
 		 				<h5>Tertiary</h5>
-		 				<input type="text" class="form-control">
+		 				<input type="text" name="education_tertiary" class="form-control">
 		 			</div>
 		 		</div>
 	 			<div class="col-md-6">
 		 			<div class="form-group">
 		 				<h5>Year of Completion</h5>
-		 				<input type="text" class="form-control">
+		 				<input type="text" name="education_tertiary_year" class="form-control">
 		 			</div>
 	 			</div>
 	 			<div class="col-md-6">
 		 			<div class="form-group">
 		 				<h5>Course</h5>
-		 				<input type="text" class="form-control">
+		 				<input type="text" name="course" class="form-control">
 		 			</div>
 		 		</div>
 	 			<div class="col-md-6">
 		 			<div class="form-group">
 		 				<h5>Other Course</h5>
-		 				<input type="text" class="form-control">
+		 				<input type="text" name="other_course" class="form-control">
 		 			</div>
 	 			</div>
 			</div>
