--- a/plugins/heidimarasigan/nltc/components/applicationform/reference_details.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/reference_details.htm
@@ -28,7 +28,7 @@
 		</div>
 		<div class="col-md-2">
 			<div class="form-group">
-				<input type="text" class="form-control" name="reference_relation[]" value="{{ details.reference_relation }}">		
+				<input type="text" class="form-control" name="reference_relationship[]" value="{{ details.reference_relation }}">		
 			</div>
 		</div>
 		<div class="col-md-3">
