--- a/plugins/heidimarasigan/nltc/components/applicationform/training_attended.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/training_attended.htm
@@ -18,18 +18,18 @@
 	<div class="col-md-1 text-center" style="padding-top: 8px">{{ loop.index }}. </div>
 	<div class="col-md-4">
 		<div class="form-group">
-			<input type="text" class="form-control" name="training_type[]" value="{{ item.training_type }}">
+			<input type="text" class="form-control" name="christian_training_type[]" value="{{ item.christian_training_type }}">
 		</div>
 	</div>
 	<div class="col-md-3">
 		<div class="form-group">
-			<input type="text" class="form-control" name="training_venue[]" value="{{ item.training_venue }}">
+			<input type="text" class="form-control" name="christian_training_venue[]" value="{{ item.christian_training_venue }}">
 		</div>
 	</div>
 	<div class="col-md-3">
 		<div class="form-group">
 			<div class='input-group date' >
-		        <input type='date' class="form-control" id='datepicker' name="training_date[]" value="{{ item.training_date }}">
+		        <input type='date' class="form-control" id='datepicker' name="christian_training_date[]" value="{{ item.christian_training_date }}">
 		        <span class="input-group-addon">
 		        	<span class="glyphicon glyphicon-calendar"></span>
 				</span>
