--- a/plugins/heidimarasigan/nltc/components/applicationform/interviewdetails.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/interviewdetails.htm
@@ -7,7 +7,7 @@
 		 			<div class="form-group">
 		 				<h5>Interview Date</h5>			 				       
 		 				<div class='input-group date' id='scheduled_date'>
-		                    <input type='text' class="form-control datepicker">
+		                    <input type='text' class="form-control datepicker" name="interview_date">
 		                    <span class="input-group-addon">
 		                    	<span class="glyphicon glyphicon-calendar"></span>
                 			</span>
@@ -19,7 +19,7 @@
 	            	<div class="form-group">
 		 				<h5>Interview Time</h5>	
 		 				<div class="dropdown-toggle" data-toggle="dropdown">	
-		 					<select id="appt_time" name="appt_time" class="form-control">
+		 					<select id="appt_time" name="interview_time" class="form-control">
 		 						<option> --Select time from list--</option>
 		 						<option>09:00 am</option>
 						        <option>10:00am</option>
