--- a/plugins/heidimarasigan/nltc/components/applicationform/personalreferences.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/personalreferences.htm
@@ -7,7 +7,7 @@
 	 			<div class="form-group">
 	 				<h5>References</h5>	 			
 		 				<a class="btn" href="#" data-request="{{ __SELF__ }}::onAddReference"
-		 				data-request-update="'{{ __SELF__ }}::reference_details':'#reference_wrapper'">
+		 				data-request-update="'{{ __SELF__ }}::reference_details':'#reference_wrapper'" name="references">
 	  						<i class="glyphicon glyphicon-plus-sign"></i> Add </a>
 	  			</div>				
 			</div>
