--- a/plugins/heidimarasigan/nltc/components/applicationform/physicalhealthcondition.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/physicalhealthcondition.htm
@@ -7,12 +7,12 @@
 	 				<h5>Do you have any physical handicaps or illnesses?</h5>
 	 				<div class="radio">
 		 				<label>
-		 					<input type="radio" name="physical_illness">Yes
+		 					<input type="radio" name="physical_handicap">Yes
 		 				</label>
 		 			</div>
 		 			<div class="radio">
 		 				<label>
-		 					<input type="radio" name="physical_illness">No
+		 					<input type="radio" name="physical_handicap">No
 		 				</label>
 		 			</div>			 			
 	 			</div>
@@ -22,12 +22,12 @@
 	 				<h5>Have you ever been convicted of any criminal offense?</h5>
 	 				<div class="radio">
 		 				<label>
-		 					<input type="radio" name="criminal_offense">Yes
+		 					<input type="radio" name="physical_criminal">Yes
 		 				</label>
 		 			</div>
 		 			<div class="radio">
 		 				<label>
-		 					<input type="radio" name="criminal_offense">No
+		 					<input type="radio" name="physical_criminal">No
 		 				</label>
 		 			</div>			 			
 	 			</div>
@@ -37,12 +37,12 @@
 	 				<h5>Have you undergone rehabilitation for substance abuse?</h5>
 	 				<div class="radio">
 		 				<label>
-		 					<input type="radio" name="substance_abuse">Yes
+		 					<input type="radio" name="physical_abuse">Yes
 		 				</label>
 		 			</div>
 		 			<div class="radio">
 		 				<label>
-		 					<input type="radio" name="substance_abuse">No
+		 					<input type="radio" name="physical_abuse">No
 		 				</label>
 		 			</div>			 			
 	 			</div>
@@ -52,12 +52,12 @@
 	 				<h5>Have you undergone or still in any psychological and/or psychiatric therapy/medication?</h5>
 	 				<div class="radio">
 		 				<label>
-		 					<input type="radio" name="theraphy_medication">Yes
+		 					<input type="radio" name="physical_psychological">Yes
 		 				</label>
 		 			</div>
 		 			<div class="radio">
 		 				<label>
-		 					<input type="radio" name="theraphy_medication">No
+		 					<input type="radio" name="physical_psychological">No
 		 				</label>
 		 			</div>			 			
 	 			</div>
