--- a/plugins/heidimarasigan/nltc/components/applicationform/interviewdetails.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/interviewdetails.htm
@@ -69,6 +69,7 @@
 	      		<div class="pull-right">
 					<div class="btn-group" role="group" aria-label="align-right">
 							<button type="button" class="btn btn-primary"
+							data-request-redirect="thank-you"
 							data-request-data="page: 9"	
 							data-request="{{ __SELF__ }}::onSave">Confirm</button> 
 					</div>
