--- a/plugins/heidimarasigan/nltc/components/applicationform/personalinformation.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/personalinformation.htm
@@ -2,64 +2,81 @@
 	<div class="wrapper panel-body">
 		<h3>Personal Information</h3>
 		<form>
-			<div class="row">
-		 		<div class="col-md-6">
-			 			<div class="form-group">
-			 				<h5>First Name</h5>
-			 				<input type="text" 
-			 				name="first_name" 
-			 				class="form-control" value="{{ personal_information_values.first_name }}">
-			 			</div>
+			<div class="form-group row">
+		 		<div class="col-md-4">
+	 				<h5>First Name</h5>
+	 				<input type="text" 
+	 				name="first_name" 
+	 				class="form-control" value="{{ personal_information_values.first_name }}">
+	 			</div>
+	 			<div class="col-md-4">		 			
+	 				<h5>Middle Name</h5>
+	 				<input type="text" 
+	 				name="middle_name" 
+	 				class="form-control" value="{{ personal_information_values.middle_name }}">	
+	 			</div>
+	 			<div class="col-md-4">		 			
+	 				<h5>Last Name</h5>
+	 				<input type="text" 
+	 				name="last_name" 
+	 				class="form-control" value="{{ personal_information_values.last_name }}">	
+	 			</div>
+	 		</div>
+	 		<div class="form-group row">
+	 			<div class="col-md-4">		 			
+	 				<h5>Nick Name</h5>
+	 				<input type="text" 
+	 				name="nickname" 
+	 				class="form-control" value="{{ personal_information_values.nickname }}">
+	 			</div>
+ 			</div>
+ 			<div class="form-group row">
+	 			<div class="col-md-6">		 			
+	 				<h5>Address</h5>
+	 				<input type="text" 
+	 				name="address" 
+	 				class="form-control" value="{{ personal_information_values.address }}">
+	 			</div>
+	 			<div class="col-md-4">			 			
+	 				<h5>City</h5>
+	 				<input type="text" 
+	 				name="city" 
+	 				class="form-control" value="{{ personal_information_values.city }}">
+	 			</div>
+	 			<div class="col-md-2">	 			
+	 				<h5>State</h5>
+	 				<input type="text" 
+	 				name="state" 
+	 				class="form-control" value="{{ personal_information_values.state }}">
+	 			</div>
+ 			</div>
+	 		<div class="form-group row">	
+	 			<div class="col-md-4">		 			
+	 				<h5>Country</h5>
+	 				<div class="dropdown">	
+	 					<select name="country" class="form-control">
+	 						<option> --Select country from list--</option>
+	 						{% for country in __SELF__.getCountryList() %}
+	                    	<option value="{{ country }}"
+	                    	{% if personal_information_values.country == country %} 
+	                    	selected="selected" 
+	                    	{% endif %}
+	                    	>
+	                    	{{ country }}
+	                    	</option>
+	                    {% endfor %}
+	 					</select>		 					 				
+		 			</div>
 		 		</div>
-	 			<div class="col-md-6">
+		 		<div class="col-md-2">
 		 			<div class="form-group">
-		 				<h5>Middle Name</h5>
+		 				<h5>Zip / Postal Code</h5>
 		 				<input type="text" 
-		 				name="middle_name" 
-		 				class="form-control" value="{{ personal_information_values.middle_name }}">
+		 				name="zip" 
+		 				class="form-control" value="{{ personal_information_values.zip }}">
 		 			</div>
 	 			</div>
-	 			<div class="col-md-6">
-		 			<div class="form-group">
-		 				<h5>Last Name</h5>
-		 				<input type="text" 
-		 				name="last_name" 
-		 				class="form-control" value="{{ personal_information_values.last_name }}">
-		 			</div>
-	 			</div>
-	 			<div class="col-md-12">
-		 			<div class="form-group">
-		 				<h5>Address</h5>
-		 				<input type="text" 
-		 				name="address" 
-		 				class="form-control" value="{{ personal_information_values.address }}">
-		 			</div>
-	 			</div>
-	 			<div class="col-md-6">
-			 			<div class="form-group">
-			 				<h5>City</h5>
-			 				<input type="text" 
-			 				name="city" 
-			 				class="form-control" value="{{ personal_information_values.city }}">
-			 			</div>
-		 		</div>
-	 			<div class="col-md-6">
-		 			<div class="form-group">
-		 				<h5>State</h5>
-		 				<input type="text" 
-		 				name="state" 
-		 				class="form-control" value="{{ personal_information_values.state }}">
-		 			</div>
-	 			</div>
-	 			<div class="col-md-6">
-			 			<div class="form-group">
-			 				<h5>Country</h5>
-			 				<input type="text" 
-			 				name="country" 
-			 				class="form-control" value="{{ personal_information_values.country }}">
-			 			</div>
-		 		</div>
-	 			<div class="col-md-6">
+	 			<div class="col-md-2">
 		 			<div class="form-group">
 		 				<h5>Citizenship</h5>
 		 				<input type="text" 
@@ -67,184 +84,165 @@
 		 				class="form-control" value="{{ personal_information_values.citizenship }}">
 		 			</div>
 	 			</div>
-	 			<div class="col-md-6">
-			 			<div class="form-group">
-			 				<h5>Phone</h5>
-			 				<input type="text" 
-			 				name="phone" 
-			 				class="form-control" value="{{ personal_information_values.phone }}">
-			 			</div>
+	 		</div>
+	 		<div class="form-group row">
+	 			<div class="col-md-4">		 			
+	 				<h5>Email</h5>
+	 				<input type="text" 
+	 				name="email" 
+	 				class="form-control" value="{{ personal_information_values.email }}">		
+	 			</div>	 	
+	 			<div class="col-md-4">			 			
+	 				<h5>Phone</h5>
+	 				<input type="text" 
+	 				name="phone" 
+	 				class="form-control" value="{{ personal_information_values.phone }}">		
 		 		</div>
-	 			<div class="col-md-6">
-		 			<div class="form-group">
-		 				<h5>Mobile</h5>
-		 				<input type="text" 
-		 				name="mobile" 
-		 				class="form-control" value="{{ personal_information_values.mobile }}">
-		 			</div>
+	 			<div class="col-md-4">		 			
+	 				<h5>Mobile</h5>
+	 				<input type="text" 
+	 				name="mobile" 
+	 				class="form-control" value="{{ personal_information_values.mobile }}">	
 	 			</div>
-	 			<div class="col-md-6">
-			 			<div class="form-group">
-			 				<h5>Facebook</h5>
-			 				<input type="text" 
-			 				name="facebook" 
-			 				class="form-control" value="{{ personal_information_values.facebook }}">
-			 			</div>
-		 		</div>
-	 			<div class="col-md-6">
-		 			<div class="form-group">
-		 				<h5>Email</h5>
-		 				<input type="text" 
-		 				name="email" 
-		 				class="form-control" value="{{ personal_information_values.email }}">
-		 			</div>
+	 		</div>	
+	 		<div class="form-group row">
+	 			<div class="col-md-4">			 			
+	 				<h5>Website</h5>
+	 				<input type="text" 
+	 				name="website" 
+	 				class="form-control" value="{{ personal_information_values.website }}">	 	
+		 		</div> 		 		
+		 		<div class="col-md-4">			 			
+	 				<h5>Facebook</h5>
+	 				<input type="text" 
+	 				name="facebook" 
+	 				class="form-control" value="{{ personal_information_values.facebook }}">	
+		 		</div> 
+		 	</div>			
+	 		<div class="form-group row">	
+	 			<div class="col-md-4">		 		
+	 				<h5>Age</h5>
+	 				<input type="text" 
+	 				name="age" 
+	 				class="form-control" value="{{ personal_information_values.age }}">			
 	 			</div>
-	 			<div class="col-md-6">
-			 			<div class="form-group">
-			 				<h5>Website</h5>
-			 				<input type="text" 
-			 				name="website" 
-			 				class="form-control" value="{{ personal_information_values.website }}">
-			 			</div>
-		 		</div>
-	 			<div class="col-md-6">
-		 			<div class="form-group">
-		 				<h5>Age</h5>
-		 				<input type="text" 
-		 				name="age" 
-		 				class="form-control" value="{{ personal_information_values.age }}">
-		 			</div>
-	 			</div>
-	 			<div class="col-md-6">
-		 			<div class="form-group">
-		 				<h5>Date of Birth</h5>			 				       
-		 				<div class='input-group date' >
-		                    <input type='text' name="date_of_birth" 
-		                    class="form-control datepicker" id='date_of_birth'
-		                    value="{{ personal_information_values.date_of_birth }}">
-		                    <span class="input-group-addon">
-		                    	<span class="glyphicon glyphicon-calendar"></span>
-                			</span>
-            			</div>
-        			</div>
+	 			<div class="col-md-4">		 			
+	 				<h5>Date of Birth</h5>			 				       
+	 				<div class='input-group date' >
+	                    <input type='text' name="date_of_birth" placeholder="mm/dd/yyyy" class="form-control datepicker" id='date_of_birth'
+	                    value="{{ personal_information_values.date_of_birth }}">
+	                    <span class="input-group-addon">
+	                    	<span class="glyphicon glyphicon-calendar"></span>
+            			</span>
+        			</div>        			
         		</div>			 							
-	 			<div class="col-md-6">
-		 			<div class="form-group">
-		 				<h5>Place of Birth</h5>
-		 				<input type="text" 
-		 				name="place_of_birth" 
-		 				class="form-control" value="{{ personal_information_values.place_of_birth }}">
-		 			</div>
+	 			<div class="col-md-4">		 			
+	 				<h5>Place of Birth</h5>
+	 				<input type="text" 
+	 				name="place_of_birth" 
+	 				class="form-control" value="{{ personal_information_values.place_of_birth }}">
 	 			</div>
-	 			<div class="col-md-6">
-		 			<div class="form-group">
-		 				<h5>Gender</h5>
-		 				<div class="radio">
-			 				<label>
-			 					<input type="radio" name="gender" value="Male"  
-			 					{% if personal_information_values.gender == "Male" %}
-				    			checked="checked"
-				    			{% endif %}
-				    			>Male
-			 				</label>
-			 			</div>
-			 			<div class="radio">
-			 				<label>
-			 					<input type="radio" name="gender" value="Female" 
-			 					{% if personal_information_values.gender == "Female" %}
-			 					checked="checked"
-				    			{% endif %}
-			 					>Female
-			 				</label>
-			 			</div>			 			
+	 		</div>
+	 		<div class="form-group row">	
+	 			<div class="col-md-6">		 		
+	 				<h5>Gender</h5>
+	 				<div class="radio">
+		 				<label>
+		 					<input type="radio" name="gender" value="Male"  
+		 					{% if personal_information_values.gender == "Male" %}
+			    			checked="checked"
+			    			{% endif %}
+			    			>Male
+		 				</label>
+		 			</div>
+		 			<div class="radio">
+		 				<label>
+		 					<input type="radio" name="gender" value="Female" 
+		 					{% if personal_information_values.gender == "Female" %}
+		 					checked="checked"
+			    			{% endif %}
+		 					>Female
+		 				</label>
 		 			</div>
 				</div>
 				<div class="col-md-6">
-		 			<div class="form-group">
-		 				<h5>Civil Status</h5>
-		 				<div class="dropdown">	
-		 					<select name="civil_status" 
-		 					class="form-control">
-		 						<option> --Select item from list--</option>
-		 						<option value = "Single"
-		 						{% if personal_information_values.civil_status == "Single" %}
-			 					selected="selected"
-				    			{% endif %}
-		 						>Single</option>
-						        <option value = "Married"
-						        {% if personal_information_values.civil_status == "Married" %}
-			 					selected="selected"
-				    			{% endif %}
-						        >Married</option>
-						        <option value = "Separated"
-						        {% if personal_information_values.civil_status == "Separated" %}
-			 					selected="selected"
-				    			{% endif %}
-				    			>Separated</option>
-						        <option value = "Widowed"
-						        {% if personal_information_values.civil_status == "Widowed" %}
-			 					selected="selected"
-				    			{% endif %}
-				    			>Widowed</option>
-						        <option value = "Remarried" 
-						        {% if personal_information_values.civil_status == "Remarried" %}
-			 					selected="selected"
-				    			{% endif %}
-				    			>Remarried</option>
-		 					</select>
-		 				</div>
-		 			</div>
-		 		</div>	
-		 		<div class="row">
-		 			<div class=" col-md-12">
-			 		<div class="col-md-6">
-			 			<div class="form-group">
-			 				<h5>Occupational Field</h5>
-			 				<div class="dropdown">	
-			 					<select name="occupational_field" class="form-control">
-			 						{% for occupational_field in __SELF__.getOccupationList() %}
-			                    	<option value="{{ occupational_field }}"
-			                    	{% if personal_information_values.occupational_field == occupational_field %} 
-			                    	selected="selected" 
-			                    	{% endif %}
-			                    	>
-			                    	{{ occupational_field }}
-			                    	</option>
-			                    {% endfor %}
-			 					</select>
-			 				</div>
-			 			</div>		 			
-		 			</div>		 				
-			 		<div class="col-md-6">
-			 			<div class="form-group">        
-			 				<h5>Specific Function / Role</h5>
-			 				<input type="text" name="role" placeholder="eg. Finance Manager" 
-			 				class="form-control" autocomplete="off" maxlength="255" value="{{ personal_information_values.role }}">
-			 			</div>
-			 		</div>	
-			 		</div> 	
+	 				<h5>Civil Status</h5>
+	 				<div class="dropdown">	
+	 					<select name="civil_status" 
+	 					class="form-control">
+	 						<option> --Select item from list--</option>
+	 						<option value = "Single"
+	 						{% if personal_information_values.civil_status == "Single" %}
+		 					selected="selected"
+			    			{% endif %}
+	 						>Single</option>
+					        <option value = "Married"
+					        {% if personal_information_values.civil_status == "Married" %}
+		 					selected="selected"
+			    			{% endif %}
+					        >Married</option>
+					        <option value = "Separated"
+					        {% if personal_information_values.civil_status == "Separated" %}
+		 					selected="selected"
+			    			{% endif %}
+			    			>Separated</option>
+					        <option value = "Widowed"
+					        {% if personal_information_values.civil_status == "Widowed" %}
+		 					selected="selected"
+			    			{% endif %}
+			    			>Widowed</option>
+					        <option value = "Remarried" 
+					        {% if personal_information_values.civil_status == "Remarried" %}
+		 					selected="selected"
+			    			{% endif %}
+			    			>Remarried</option>
+	 					</select>
+	 				</div>
 		 		</div>
+		 	</div>
+		 	<div class="form-group row">		 			
 		 		<div class="col-md-6">
-		 			<div class="form-group" id="Form-field-Applications-travelling-group">
-		 				<h5>Does your present occupation involve travelling out of town / the country?</h5>
-		 				<div class="radio">
-			 				<label>
-			 					<input type="radio" name="travelling" value="yes"  onclick="$('#travel_details').show();" 
-			 					{% if personal_information_values.travelling == "yes" %}
-				    			checked="checked"
-				    			{% endif %}
-				    			>Yes
-			 				</label>
-			 			</div>
-			 			<div class="radio">
-			 				<label>
-			 					<input type="radio" name="travelling" value="no" onclick="$('#travel_details').hide();" 
-			 					{% if personal_information_values.travelling == "no" %}
-				    			checked="checked"
-				    			{% endif %}
-				    			>No
-			 				</label>
-			 			</div>			 			
+	 				<h5>Occupational Field</h5>
+	 				<div class="dropdown">	
+	 					<select name="occupational_field" class="form-control">
+	 						{% for occupational_field in __SELF__.getOccupationList() %}
+	                    	<option value="{{ occupational_field }}"
+	                    	{% if personal_information_values.occupational_field == occupational_field %} 
+	                    	selected="selected" 
+	                    	{% endif %}
+	                    	>
+	                    	{{ occupational_field }}
+	                    	</option>
+	                    {% endfor %}
+	 					</select>
+	 				</div>	 			
+	 			</div>		 				
+		 		<div class="col-md-6">        
+	 				<h5>Specific Function / Role</h5>
+	 				<input type="text" name="role" placeholder="eg. Finance Manager" 
+	 				class="form-control" autocomplete="off" maxlength="255" value="{{ personal_information_values.role }}">			 			
+		 		</div>	
+			</div>
+			<div class="form-group row">
+		 		<div class="col-md-6">
+	 				<h5>Does your present occupation involve travelling out of town / the country?</h5>
+	 				<div class="radio">
+		 				<label>
+		 					<input type="radio" name="travelling" value="yes"  onclick="$('#travel_details').show();" 
+		 					{% if personal_information_values.travelling == "yes" %}
+			    			checked="checked"
+			    			{% endif %}
+			    			>Yes
+		 				</label>
+		 			</div>
+		 			<div class="radio">
+		 				<label>
+		 					<input type="radio" name="travelling" value="no" onclick="$('#travel_details').hide();" 
+		 					{% if personal_information_values.travelling == "no" %}
+			    			checked="checked"
+			    			{% endif %}
+			    			>No
+		 				</label>
 		 			</div>
 				</div>
 				<div class="col-md-6" id="travel_details" 
@@ -273,12 +271,12 @@
 					</div>	
             	</div>
 		 	</div>	
-		  
+		    <div class="form-group row">
 	      		<div class="col-md-6">
 					<div class="btn-group  pull-left" role="group" aria-label="align-right">
 						<button type="button" class="btn btn-primary"
 							data-request="{{ __SELF__ }}::onRedirect" data-request-data="page: 2" data-request-update="'{{ __SELF__ }}::studyprogram':'#form_wrapper'"
-							>Back:Study Program</button>
+							>Back : Study Program</button>
 					</div>
 				</div>
 				<div class="col-md-6">
@@ -286,10 +284,10 @@
 						<button type="button" class="btn btn-primary"
 						data-request-data="page: 2"
 						data-request="{{ __SELF__ }}::onSave"
-						data-request-update="'{{ __SELF__ }}::familybackground':'#form_wrapper'">Next:Family Background</button> 
+						data-request-update="'{{ __SELF__ }}::familybackground':'#form_wrapper'">Next : Family Background</button> 
 					</div>
 				</div>
-			
+			</div>
 		 </form>		
 	</div>
 </div>
