--- a/plugins/heidimarasigan/nltc/components/applicationform/familybackground.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/familybackground.htm
@@ -53,8 +53,7 @@
 				{% endif %}	>			
 					<div class="form-group  dropdown-field span-right" name="in_agreement_why" data-field-name="in_agreement_why" data-trigger-action="show" data-trigger-condition="value[no]" data-trigger-closest-parent="form" >
 					<h5>Why?</h5>
-						<textarea name="in_agreement_why" class="form-control" rows="3" cols="10">
-						</textarea>
+						<textarea name="in_agreement_why" class="form-control" rows="3" cols="10"></textarea>
 					</div>
 			</div>
 		</div>
