--- a/plugins/heidimarasigan/nltc/components/applicationform/personalreferences.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/personalreferences.htm
@@ -22,11 +22,11 @@
 				</div>
 			</div>
 			<div class="form-group row">
-				<label class="control-label col-md-1" for="emergeny_name">
+				<label class="control-label col-md-1" for="emergency_name">
 					<h5>Name: </h5>
 				</label>
 				<div class="col-md-4" >
-					<input type="text" name="emergeny_name" class="form-control" value="{{ personal_references_values.emergeny_name }}">				
+					<input type="text" name="emergency_name" class="form-control" value="{{ personal_references_values.emergency_name }}">				
 				</div>
 			</div>
 			<div class="form-group row">				
