Changes on Final Save

--- a/plugins/heidimarasigan/nltc/components/applicationform/interviewdetails.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/interviewdetails.htm
@@ -38,7 +38,9 @@
 		      		<div class="pull-left">
 						<div class="btn-group" role="group" aria-label="align-right">
 							<button type="button" class="btn btn-primary"
-								data-request="{{ __SELF__ }}::onRedirect" data-request-data="page: 8" data-request-update="'{{ __SELF__ }}::personalreferences':'#form_wrapper'"
+								data-request="{{ __SELF__ }}::onRedirect"
+								data-request-data="page: 8"
+								data-request-update="'{{ __SELF__ }}::personalreferences':'#form_wrapper'"
 								>Back : Personal References</button>
 						</div>
 					</div>
@@ -53,7 +55,8 @@
 						<div class="btn-group" role="group" aria-label="align-right" >
 								<button type="button" class="btn btn-primary"
 								data-request-redirect="thank-you"
-								data-request-data="page: 8"	
+								data-request-confirm="Are you sure that you have filled the necessary fields?"
+								data-request-data="page: 8, setinterview: true"	
 								data-request="{{ __SELF__ }}::onSave">Confirm</button> 
 						</div>
 					</div>		 					 		
