--- a/plugins/heidimarasigan/nltc/components/applicationform/personalinformation.htm
+++ b/plugins/heidimarasigan/nltc/components/applicationform/personalinformation.htm
@@ -100,7 +100,7 @@
 		 		</div>
 	 			<div class="col-md-4">		 			
 	 				<h5>Mobile</h5>
-	 				<input type="number" 
+	 				<input type="text" 
 	 				name="mobile" 
 	 				class="form-control" value="{{ personal_information_values.mobile }}">	
 	 			</div>
