--- a/themes/newlifetrainingcenter/partials/footer.htm
+++ b/themes/newlifetrainingcenter/partials/footer.htm
@@ -1,4 +1,5 @@
-    <!-- Footer -->
+==
+<!-- Footer -->
     <footer>
         <div class="row">
             <div class="col-lg-12">
@@ -9,25 +10,7 @@
 
     </div>
     <!-- /.container -->
-
-    <!-- jQuery -->
-    <script src="{{ ['assets/javascript/jquery.js']|theme }}"></script>
-    
-    <!-- jQuery UI -->
-    <script src="{{ ['assets/javascript/jquery-ui.js']|theme }}"></script>
-
-    
-		{% framework extras %}
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="{{ ['assets/javascript/bootstrap.min.js']|theme }}"></script>
-    
-
-    <!-- Contact Form JavaScript -->
-    <!-- Do not edit these files! In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-    <script src="{{ ['assets/javascript/jqBootstrapValidation.js']|theme }}"></script>
-    <script src="{{ ['assets/javascript/contact_me.js']|theme }}"></script>
-    <!-- jQuery UI -->
+ {% scripts %}
 
 </body>
 
